asset/css/admin.css
/* ... */
.record-number-cell input[type="checkbox"] {
  margin-right: auto;
}

.record.browse #batch-form {
  position: relative;
}

.last.record-meta {
  border-right: 1px solid #dfdfdf;
}

.tablesaw-bar {
  position: absolute;
  top: 0;
  right: 0;
  width: 50%;
  padding: 2px .5rem 0 0;
}

.primary-field {
  background-color: rgba(0,0,0,.04);
}

.tablesaw-swipe-wrapper {
  position: relative;
  padding-top: 2.5rem;
  width: 100%;
}

.tablesaw-swipe-wrapper > .tablesaw-bar:before {
  content: "";
  background-color:rgba(0,0,0,0.04);  
  position: absolute;
  top: 0;
  bottom: 3px;
  left: -100%;
  right: 0;
  border: 1px solid #dfdfdf;
  border-width: 1px 1px 0 1px;
  border-radius: 3px 3px 0 0;
  padding: 5px;
  min-height: 30px;
}

.batch-inputs > * {
  position: relative;
  z-index: 1;
}

.batch-inputs ~ .tablesaw-swipe-wrapper {
  margin-top: -2.5rem;
}

.batch-inputs ~ .tablesaw-swipe-wrapper .tablesaw-bar {
  margin-top: 4px;
  width: 50%;
}

.batch-inputs ~ .tablesaw-swipe-wrapper > .tablesaw-bar:before {
  content: none;.
} 

.tablesaw-swipe-wrapper > .tablesaw-bar + .tablesaw {
  border-radius: 0;
}

.tablesaw-swipe-wrapper th,
.record.browse th {
  width: 7rem;
}

.meta-group.checkbox {
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

.meta-group.checkbox .value {
  margin-left: 1rem;
  width: auto;
}

.meta-group.checkbox h4 {
  border-bottom: 0;
  width: auto;
}

/* Record Add/Edit */

.record.add div[role="main"], 
.record.edit div[role="main"] {
  overflow: visible;
}

.previous.tablesaw-swipe-wrapper {
  position: sticky;
  top: 0;
}

.previous-next-rows-header {
  position: absolute;
  top: 4px;
  left: 10px;
  z-index: 100;
}

.previous-next-rows-header h3 {
  font-size: 16px;
  display: inline-block;
}
  
.previous-next-rows-header a.button {
  display: inline-block;
  box-shadow: none;
  margin: 0;
  background-color: transparent;
}

.previous-next-rows-header a.button:hover {
  box-shadow: none;
}

.collapsed table,
.collapsed .tablesaw-bar > * {
  height: 0;
  overflow: hidden;
  display: block;
  border-width: 1px 0 0 0;
}

.row-controls {
  display: flex;
}

.layout {
  margin-bottom: 1rem;
}

.open-guidelines {
  margin-left: auto;
}

.current-row {
  overflow-y: hidden;
  height: 100%;
}

.edit .current-row {
  margin-bottom: 12px;
}

.add .current-row {
  height: calc(100vh - 180px);
}

.current-row.horizontal .media-viewer {
  width: calc(40% - 6px);
  float: left;
  margin-right: 12px;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  height: auto;
}

.current-row.horizontal form {
  width: calc(60% - 6px);
  float: right;
  overflow-y: scroll;
  height: calc(100% - 48px);
}

.current-row.vertical {
  position: relative;
}

.current-row.vertical .media-viewer {
  width: 100%;
  text-align: center;
  height: 50%;
  overflow: hidden;
  margin-bottom: 12px;
}

.current-row.horizontal .media-container,
.current-row.horizontal .panzoom-container,
.current-row.vertical .panzoom-container {
  height: 100%;
}

.current-row.vertical .media-container {
  height: calc(100% - 42px);  
}

.current-row.vertical .media-viewer img {
  width: 100%;
}

.current-row.vertical form {
  height: calc(50% - 72px);
  overflow-y: scroll;
}

.current-row fieldset {
  margin: 0;
}

.current-row fieldset p {
  margin: 0;
}

.current-row fieldset p:last-of-type {
  margin-bottom: 12px;
}

.current-row legend {
  padding: 6px 0;
}

.current-row .panzoom-container {
  display: flex;
  align-items: center;
  justify-content: center;
}

.expanded-right .current-row.horizontal .media-viewer,
.expanded-right .current-row.horizontal form {
  width: calc(50% - 6px);
}

.fullscreen .current-row {
  position: fixed;
  top: 48px;
  right: 0;
  left: 0;
  bottom: 0;
  overflow-y: visible;
  background-color: #fff;
  padding: 6px 20px;
  height: calc(100% - 6rem);
  z-index: 2;
}

.fullscreen .rows .tablesaw-swipe-wrapper {
  z-index: 1;
}

div[role="main"].fullscreen > h1:first-of-type {
  z-index: 1;
}

.common-elements {
  padding: 6px;
  background-color: rgba(0,0,0,0.04);
  display: flex;
}

.common-elements label {
  display: inline-block;
  margin-right: 24px;
}

.common-elements input[type="checkbox"] {
  margin-left: 6px;
}

.current-row fieldset {
  position: relative;
  margin-bottom: 12px;
}

.current-row fieldset.set-to-null .field,
.current-row fieldset.set-to-null .common-elements {
  position: relative;
}

.current-row fieldset.set-to-null .field:after,
.current-row fieldset.set-to-null .common-elements:after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: rgba(255,255,255,.5);
}

.common-elements label.set-null-checkbox {
  margin: 0 0 0 auto;
  position: relative;
  z-index: 2;
}

/* Form Builder */

#form-builder-fields .dataset-field {
  position: relative;
  padding: 4px;
  background-color: rgba(0,0,0,0.04);
  margin-bottom: 8px;
}

.dataset-field > legend {
  float: left;
  display: flex;
  align-items: center;
  padding: 0;
  font-weight: bold;
  position: relative;
  margin-top: -4px;
  width: calc(100% - 192px);
  height: 44px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin-bottom: 8px;
}

#form-builder-fields .dataset-field:before {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  height: 44px;
  background-color: rgba(0,0,0,0.12);
}

#form-builder-fields .dataset-field.closed legend {
  margin-bottom: 0;
}

legend .data-type-label {
  font-weight: normal;
  font-size: 14px;
  padding: 0 8px;
  background-color: rgba(0,0,0,.5);
  color: #fff;
  display: inline-block;
  position: relative;
  letter-spacing: 1px;
  margin-left: 16px;
  max-width: 50%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

legend .field-label {
  position: relative;
  max-width: calc(100% - 296px);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
/* ... */

